2006-05-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure.ac: Fix arguments to AC_CHECK_HEADER.

2006-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): -define tiff:alpha= override was
	only working if the TIFFTAG_EXTRASAMPLES tag was present.  Now it
	is always available when an alpha channel is present.

2006-05-11  JH  <jh@ops.everybox.com>

	* GraphicsMagick.spec.in (files devel): Include
	%{_libdir}/lib%{name}Wand.so.

2006-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTGhostscriptEnumerateVersions): Recent GNU
	Ghostscript identifies itself as "GPL Ghostscript".

2006-04-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tiff: Updated bundled libtiff to version 3.8.2.

2006-04-05  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c: Sets image is_grayscale flag as well as added more
	symbolic constants.

2006-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (IMAGE_DATA_ROUNDING): Thanks to Steve Sloan for
	noticing that 8K is 8192 rather than 8092.  Added a define to
	allow tailoring the pixel data alignment boundary in case 8K is
	not the right answer for some reason.

2006-03-20  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c: Ensure that unusued opacity channel is set to opaque.
	* PerlMagick/t/input.art: New ART test image.
	* PerlMagick/t/input8.mat: New MATLAB test image (8-bit indexed).
	* PerlMagick/t/input_dbl.mat: New MATLAB test image (double grey)
	* PerlMagick/t/input_rgb.mat: New MATLAB test image (8-bit RGB)

2006-03-19  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c: Use symbolic constants rather than plain numbers
	so the module is more maintainable.  Correct the format for the
	day of the week.

2006-03-13  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c (WriteMATLABImage): Add RGB writer support for
	MATLAB format.

2006-03-11  Fojtik Jaroslav  <JaFojtik@seznam.cz>
