@@ -4772,6 +4772,7 @@ static void ConvertUsage(void)
       "                     random threshold the image",
       "-red-primary point   chomaticity red primary point",
       "-render              render vector graphics",
+      "-resample geometry   resample to horizontal and vertical resolution",
       "-resize geometry     resize the image",
       "-roll geometry       roll an image vertically or horizontally",
       "-rotate degrees      apply Paeth rotation to the image",
@@ -11720,6 +11721,7 @@ static void MogrifyUsage(void)
       "                     random threshold the image",
       "-red-primary point  chomaticity red primary point",
       "-region geometry     apply options to a portion of the image",
+      "-resample geometry   resample to horizontal and vertical resolution",
       "-resize geometry     perferred size or location of the image",
       "-roll geometry       roll an image vertically or horizontally",
       "-rotate degrees      apply Paeth rotation to the image",
