@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2006-06-01  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c: Add mention of -resample to convert and
+        mogrify usage messages.
+
+</UL>
+<p>
 2006-05-31  Ralf Wildenhues  &lt;Ralf.Wildenhues@gmx.de&gt;
 
 <UL>
